--- a/config.toml
+++ b/config.toml
@@ -1,26 +1,7 @@
 baseURL = "https://uatkd.ca"
 languageCode = "en-us"
 googleAnalytics = 'G-K5PZKE98K4'
-
-# Plugins
-[params.plugins]
-
-  # CSS Plugins
-  [[params.plugins.css]]
-  URL = "css/main.css"
-  [[params.plugins.css]]
-  URL = "css/rad-icons.css"
-  [[params.plugins.css]]
-  URL = "css/custom.css"
-
-  # JS Plugins
-  [[params.plugins.js]]
-  URL = "js/rad-animations.js"
-  [[params.plugins.js]]
-  URL = "js/sticky-header.js"
-  [[params.plugins.js]]
-  URL = "js/library/fontfaceobserver.js"
-
+logo = "img/logo.png"
 
 # navigation
 [menu]
@@ -61,11 +42,7 @@ googleAnalytics = 'G-K5PZKE98K4'
 
   sections = ["showcase", "about", "education", "experience", "client-and-work", "testimonial", "contact", "newsletter"]
 
-  googleTagManagerID = "GTM-000000" # Google Analytics works with Google Tag Manager
-
-  [params.logo]
-    text1 = "Andreas"
-    text2 = "Ellure"
+  # googleTagManagerID = "GTM-000000" # Google Analytics works with Google Tag Manager
 
   [params.footer]
       copyright = "© Raditian. All rights reserved."
@@ -73,3 +50,23 @@ googleAnalytics = 'G-K5PZKE98K4'
         x = "img/general/design-and-code-radity.png"
         _2x = "img/general/design-and-code-radity@2x.png"
         alt = "Design & Code - Radity"
+
+
+# Plugins
+[params.plugins]
+
+  # CSS Plugins
+  [[params.plugins.css]]
+  URL = "css/main.css"
+  [[params.plugins.css]]
+  URL = "css/rad-icons.css"
+  [[params.plugins.css]]
+  URL = "css/custom.css"
+
+  # JS Plugins
+  [[params.plugins.js]]
+  URL = "js/rad-animations.js"
+  [[params.plugins.js]]
+  URL = "js/sticky-header.js"
+  [[params.plugins.js]]
+  URL = "js/library/fontfaceobserver.js"
