--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://ualberta-taekwondo-club.github.io"
+baseURL = "https://ualberta-taekwondo-club.github.io/hugo-website"
 languageCode = "en-us"
 logo = "img/logo.png"
 
